--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,21 @@
 }
 
 :root {
-    --primary-color: #368fef;
-    --secondary-color: #7fb5ef;
-    --bg-color: rgb(242, 242, 242);
-    --contentBox-bg-color: white;
+    --bg-color: #f2f4f7;
+    --contentBox-bg-color: #ffffff;
+    --secondary-color: #f0f2f5;
     --link-color: #0b76ea;
-    --text-color: rgb(160, 160, 160);
+    --text-color: #363738;
     --hover-color: #d2d2d2;
 }
 
 .dark-mode {
-    --primary-color: #000000;
-    --secondary-color: #1b1b1b;
-    --bg-color: #000000;
-    --contentBox-bg-color: rgb(36, 36, 36);
+    --secondary-color: #3b3d3e;
+    --bg-color: #1c1c1d;
+    --contentBox-bg-color: #252728;
     --link-color: #0b76ea;
-    --text-color: rgb(218, 218, 218);
-    --hover-color: #2d2d2d;
+    --text-color: #e1e4e8;
+    --hover-color: #3b3b3b;
 }
 
 img {
@@ -32,7 +30,7 @@ img {
 }
 
 header {
-    background-color: var(--secondary-color);
+    background-color: var(--contentBox-bg-color);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -64,7 +62,7 @@ header nav {
 .nav-left .search-box {
     display: flex;
     align-items: center;
-    background-color: var(--contentBox-bg-color);
+    background-color: var(--secondary-color);
     border-radius: 20px;
     padding: 0 10px;
     overflow: hidden;
@@ -108,7 +106,6 @@ nav .nav-left .search-box img {
 }
 
 .nav-middle .nav-links img {
-    filter: invert(1);
     padding-bottom: 5px;
 }
 
@@ -783,7 +780,7 @@ nav .user-settings-menu .settings-options a {
 }
 
 .cover-box {
-    background-color: var(--secondary-color);
+    background-color: var(--contentBox-bg-color);
     width: 100%;
     padding-bottom: 10px;
     border-radius: 10px;
@@ -932,7 +929,7 @@ nav .user-settings-menu .settings-options a {
 }
 
 .ad-left .user-details {
-    background-color: var(--secondary-color);
+    background-color: var(--contentBox-bg-color);
     padding: 10px;
     border-radius: 10px;
 }
@@ -950,7 +947,7 @@ nav .user-settings-menu .settings-options a {
 }
 
 .photos-box {
-    background-color: var(--secondary-color);
+    background-color: var(--contentBox-bg-color);
     margin: 10px 0;
     padding: 10px;
     border-radius: 10px;
@@ -1157,7 +1154,7 @@ nav .nav-left .logo .rsp-logo {
     }
 
     nav .nav-middle .nav-links a {
-        border-bottom: 5px solid var(--primary-color);
+        border-bottom: 5px solid var(--secondary-color);
         transition: all .4s linear;
         border-radius: 10px 10px 0 0;
     }
