--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     --bg-color: #f2f4f7;
     --contentBox-bg-color: #ffffff;
     --secondary-color: #f0f2f5;
-    --link-color: #0b76ea;
+    --link-color: #0866ff;
     --text-color: #363738;
     --hover-color: #d2d2d2;
 }
@@ -20,7 +20,7 @@
     --secondary-color: #3b3d3e;
     --bg-color: #1c1c1d;
     --contentBox-bg-color: #252728;
-    --link-color: #0b76ea;
+    --link-color: #0866ff;
     --text-color: #e1e4e8;
     --hover-color: #3b3b3b;
 }
@@ -34,6 +34,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 10;
+    padding: 0 2%;
 }
 
 header nav {
@@ -124,20 +125,6 @@ nav .nav-left .search-box img {
     justify-content: flex-end;
 }
 
-.nav-right .find-friends {
-    background-color: var(--secondary-color);
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all .4s linear;
-}
-
-
-.nav-right .find-friends:hover {
-    background-color: var(--hover-color);
-}
-
 .nav-right .menu,
 .nav-right .messenger,
 .nav-right .notification {
@@ -163,6 +150,7 @@ nav .nav-left .search-box img {
 .nav-right .notification:hover {
     background-color: var(--hover-color);
 }
+
 .nav-right .user-profile {
     position: relative;
 }
@@ -557,6 +545,7 @@ nav .user-settings-menu .settings-options a {
 .users-posts .user-post .post-title .user-name p {
     font-size: 14px;
 }
+
 .user-post .post-description {
     font-size: 12px;
     margin: 10px 0;
@@ -813,8 +802,8 @@ nav .user-settings-menu .settings-options a {
 }
 
 .cover button {
-    background-color: var(--bg-color);
-    padding: 5px 10px;
+    background-color: var(--secondary-color);
+    padding: 10px 20px;
     position: absolute;
     bottom: 20px;
     right: 20px;
@@ -824,11 +813,14 @@ nav .user-settings-menu .settings-options a {
     border-radius: 5px;
     border: none;
     outline: none;
-    font-weight: 600;
+    font-weight: 700;
+    font-size: 14px;
+    cursor: pointer;
+    transition: all .4s linear;
 }
 
-.cover button img {
-    height: 15px;
+.cover button:hover {
+    background-color: var(--hover-color);
 }
 
 .cover-box .profile {
@@ -841,6 +833,12 @@ nav .user-settings-menu .settings-options a {
 .profile .profile-left {
     display: flex;
     align-items: center;
+    position: relative;
+    width: 60%;
+
+}
+
+.profile .profile-left .profile-img {
     position: relative;
 }
 
@@ -856,8 +854,8 @@ nav .user-settings-menu .settings-options a {
     background-color: var(--secondary-color);
     padding: 1.5px 0 0 1.4px;
     position: absolute;
-    bottom: 10px;
-    left: 114px;
+    bottom: 10%;
+    left: 70%;
     border-radius: 50%;
     width: 34px;
     height: 34px;
@@ -879,13 +877,12 @@ nav .user-settings-menu .settings-options a {
 }
 
 .profile-left .account-name h3 {
-    font-size: 25px;
+    font-size: 30px;
     margin: 10px 0;
 }
 
 .profile-left .account-name h3 span {
     font-weight: 400;
-    font-size: 22px;
 }
 
 .profile-left .account-name>div {
@@ -894,9 +891,9 @@ nav .user-settings-menu .settings-options a {
 }
 
 .profile-left .account-name .followers-imgs img {
-    width: 20px;
-    margin-right: -7px;
-    border: 1px solid black;
+    width: 35px;
+    margin-right: -10px;
+    border: 2px solid var(--contentBox-bg-color);
 }
 
 .profile-right {
@@ -919,15 +916,11 @@ nav .user-settings-menu .settings-options a {
 
 .profile-right button img {
     width: 20px;
-    filter: invert(1);
 }
 
 .profile-right button:first-child {
-    background-color: #368fef;
-}
-
-.profile-right button:first-child img {
-    filter: invert(0);
+    background-color: var(--link-color);
+    color: white;
 }
 
 .profile-right button:hover {
@@ -1010,22 +1003,16 @@ nav .user-settings-menu .settings-options a {
     font-size: 12px;
 }
 
-.photos-box .friends-photos {
-    row-gap: 2%;
-    column-gap: 1%;
-}
-
-.photos-box .friends-photos img {
-    object-fit: cover;
-    border-radius: 4px;
-}
-
 nav .nav-left .logo .rsp-logo {
     display: none;
 }
 
 
 @media screen and (max-width: 1200px) {
+    #profile-page-main {
+        padding: 0 4%;
+    }
+
     .story:last-child {
         display: none;
     }
@@ -1035,30 +1022,14 @@ nav .nav-left .logo .rsp-logo {
         height: 260px;
         white-space: nowrap;
     }
-
-    .nav-left,
-    .nav-right {
-        padding: 0 2%;
-    }
-
-    .nav-right .find-friends {
-        display: none;
-    }
-
-    .cover-box .profile {
-        padding: 0 2%;
-    }
-
-    .profile-left .account-name h3 {
-        font-size: unset;
-    }
-
-    .profile-left .account-name h3 span {
-        font-size: unset;
-    }
 }
 
 @media screen and (max-width: 950px) {
+    .nav-left .search-box {
+        width: fit-content;
+        padding: 5px;
+    }
+
     #main {
         padding-left: 0;
     }
@@ -1068,25 +1039,40 @@ nav .nav-left .logo .rsp-logo {
     }
 
     .main-container {
-        width: 65%;
-    }
-
-    .nav-left .search-box {
-        width: fit-content;
-        padding: 5px;
-    }
-
-    nav .nav-left .search-box img {
-        width: 20px;
-    }
-
-    .nav-left .search-box input {
-        display: none;
+        width: 67%;
     }
 
     .main-right-sidebar {
         width: 33%;
     }
+
+
+
+    .nav-left .search-box input {
+        display: none;
+    }
+
+    .profile {
+        flex-direction: column;
+        gap: 20px;
+        margin: 20px 0;
+    }
+
+    .profile .profile-left,
+    .profile .profile-right {
+        width: 100%;
+    }
+
+    .profile .profile-right button {
+        width: 33%;
+        justify-content: space-between;
+        justify-content: center;
+        gap: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
 @media screen and (max-width: 900px) {
@@ -1106,31 +1092,6 @@ nav .nav-left .logo .rsp-logo {
         display: none;
     }
 
-    .profile {
-        flex-direction: column;
-        gap: 20px;
-        margin: 20px 0;
-    }
-
-    .profile .profile-left,
-    .profile .profile-right {
-        width: 100%;
-        justify-content: space-evenly;
-    }
-
-    .profile .profile-right button {
-        width: 33%;
-        justify-content: space-between;
-        justify-content: center;
-        gap: 10px;
-    }
-
-    .profile .profile-left .change-profile-photo {
-        left: 31%;
-        bottom: 7px;
-    }
-
-
     .account-details {
         flex-direction: column;
     }
@@ -1148,10 +1109,11 @@ nav .nav-left .logo .rsp-logo {
 
     header {
         height: 94px;
+        padding: 0 10px;
+    }
 
-        nav {
-            flex-wrap: wrap;
-        }
+    nav {
+        flex-wrap: wrap;
     }
 
     nav .nav-left .logo .lg-logo {
@@ -1161,12 +1123,13 @@ nav .nav-left .logo .rsp-logo {
     nav .nav-left .logo .rsp-logo {
         display: block;
     }
-    
+
     nav .nav-left .logo .rsp-logo img {
         width: 150px;
         position: relative;
         top: 0px;
     }
+
     nav .nav-middle {
         order: 3;
         width: 100%;
@@ -1179,12 +1142,12 @@ nav .nav-left .logo .rsp-logo {
         transition: all .4s linear;
         border-radius: 10px 10px 0 0;
     }
-    
-    
-    .nav-middle .nav-links a:first-child {
-    padding: 2px;
 
-}
+
+    .nav-middle .nav-links a:first-child {
+        padding: 2px;
+
+    }
 
     nav .nav-middle .nav-links a:hover {
         border-bottom: 5px solid var(--secondary-color);
@@ -1192,14 +1155,14 @@ nav .nav-left .logo .rsp-logo {
 
     nav .nav-left {
         align-items: center;
-        width: 80%;
+        width: 70%;
         justify-content: space-between;
         padding: 10px;
     }
 
     .nav-left .search-box {
         padding: 5px;
-        width: 90%;
+        width: fit-content;
         justify-content: flex-end;
         width: fit-content;
         align-items: center;
@@ -1210,50 +1173,62 @@ nav .nav-left .logo .rsp-logo {
         padding: 10px;
     }
 
-    .nav-right .menu,
-    .nav-right .notification {
-        display: none;
+    .story-container .story {
+        height: 150px;
     }
 
-    .cover-box .cover {
-        height: 180px;
+    .cover button {
+        padding: 5px 10px;
     }
+}
 
-    .profile .profile-left img {
-        width: 120px;
-    }
+.nav-right .menu,
+.nav-right .notification {
+    display: none;
+}
 
-    .profile-left .account-name>div {
-        font-size: 10px;
-    }
+.cover-box .cover {
+    height: 300px;
+}
 
-    .profile .profile-right {
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 15px 0px;
-    }
+.profile .profile-left img {
+    width: 120px;
+}
 
-    .profile .profile-right button {
-        font-size: 12px;
-        width: 48%;
+.profile-left .account-name h3 {
+    font-size: 25px;
+}
 
-    }
+.profile .profile-right {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 15px 0px;
+}
 
-    .profile .profile-right button:first-child {
-        order: 3;
-        width: 100%;
-    }
+.profile .profile-right button {
+    font-size: 12px;
+    width: 48%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
 
-    #main,
-    .nav-left,
-    nav .nav-middle,
-    .nav-right {
-        padding: 0;
-    }
+}
 
-    .main-container {
-        padding: 10px;
-    }
+.profile .profile-right button:first-child {
+    order: 3;
+    width: 100%;
+}
+
+#main,
+.nav-left,
+nav .nav-middle,
+.nav-right {
+    padding: 0;
+}
+
+.main-container {
+    padding: 10px;
 }
 
 @media screen and (max-width: 450px) {
@@ -1274,6 +1249,17 @@ nav .nav-left .logo .rsp-logo {
         padding: 5px;
     }
 
+    .cover-box .profile {
+        padding: 0 2%;
+    }
+    .profile-left .account-name h3 {
+        font-size: 20px;
+    }
+
+    .profile-left .account-name>div {
+        font-size: 12px;
+    }
+
     .main-container {
         padding: 0;
         margin-top: 10px;
@@ -1282,6 +1268,7 @@ nav .nav-left .logo .rsp-logo {
     .post-input-container .post-types div a {
         font-size: 10px;
     }
+
     .post-input-container .post-types div a img {
         width: 20px;
     }
